<resources>
    <string name="app_name">EletroShop</string>
    <string name="btn_anunciar_produto">Anunciar Produto</string>
    <string name="btn_fechar_pedido">Fechar Pedido</string>
    <string name="btn_adicionar_ao_carrinho">Adicionar ao Carrinho</string>
    <string name="btn_cadastrar">Cadastrar</string>
    <string name="btn_entrar">Entrar</string>
    <string name="btn_salvar">Salvar</string>
    <string name="btn_visualizar_produto">Visualizar</string>
    <string name="btn_editar_produto">Editar Produto</string>
    <string name="btn_remover_produto">Remover Produto</string>
    <string name="btn_cancelar">Cancelar</string>
    <string name="btn_voltar">Voltar</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_editar_imagem">editar imagem</string>
    <string name="placeholder_buscar_produtos">Buscar Produtos</string>
    <string name="placeholder_nome">digite seu nome</string>
    <string name="placeholder_data_nascimento">informe sua data de nascimento</string>
    <string name="placeholder_email">digite seu email</string>
    <string name="placeholder_senha">digite sua senha</string>
    <string name="placeholder_localizacao">informe sua localização</string>
    <string name="placeholder_bio">escreva sua bio</string>
    <string name="placeholder_titulo">digite o título do produto</string>
    <string name="placeholder_categoria">informe a categoria do produto</string>
    <string name="placeholder_preco">digite o preco do produto</string>
    <string name="placeholder_descricao">escreva a descrição do produto</string>
    <string name="label_login_usuario">Login de Usuário</string>
    <string name="label_cadastro_usuario">Cadastro de Usuário</string>
    <string name="label_perfil">Perfil</string>
    <string name="label_editar_perfil">Editar Perfil</string>
    <string name="label_anunciar_produto">Anunciar Produto</string>
    <string name="label_editar_produto">Editar Produto</string>
    <string name="label_descrição">Descrição</string>
    <string name="label_nao_cadastrado">Não está cadastrado?</string>
    <string name="label_cadastrar_se">Cadastrar-se</string>
    <string name="label_bio">Bio</string>
    <string name="heading_carrinho_sem_produtos">Carrinho sem Produtos</string>
    <string name="heading_sem_favoritos">Sem Favoritos</string>
    <string name="heading_compra_finalizada">Compra Finalizada</string>
    <string name="label_exibicao_perfil">Perfil</string>
    <string name="descricao_foto_perfil">Foto de perfil do usuário</string>
    <string name="mock_nome_perfil">Cristiano Ronaldo Jr.</string>
    <string name="mock_cidade_perfil">Maringá-PA</string>
    <string name="mock_dataNasc_perfil">01/01/1990</string>
    <string name="title_activity_exibicao_perfil">ExibicaoPerfil</string>
    <string name="title_activity_criacao_perfil">CriacaoPefil</string>
    <string name="title_activity_edicao_perfil">EdicaoPerfil</string>
    <string name="label_bio_exibicao_perfil">Bio</string>
    <string name="mock_bio_exibicao_perfil">"Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec tincidunt, ligula non varius efficitur, nulla nunc mollis turpis, id porta dolor sem vitae nisi. Proin non nunc aliquet, tempus nibh a, sagittis tellus. Vivamus eu orci commodo, lacinia mi quis, posuere urna. In finibus lorem velit, in porta elit viverra sed. Etiam egestas, est nec venenatis ultrices, augue lacus tristique nisi, a suscipit massa nunc id nunc. Praesent laoreet lacinia facilisis. Vestibulum congue convallis massa, et lobortis tortor pretium quis. Pellentesque aliquet dui orci, in facilisis risus mollis vitae. Quisque vitae metus nisi. "</string>
    <string name="mock_titulo_produto">Geladeira Consul Frost Free Duplex</string>
    <string name="mock_categoria_produto">Cozinha</string>
    <string name="mock_preco_produto">679</string>
    <string name="mock_descricao_produto">Geladeira Consul Frost Free Duplex é a sua geladeira de qualidade com um sistema moderno de refrigeração em 25 níveis desde o neutro até o sub-zero. Contém diversos compartimentos divididos estratégicamente para as mais diversas finalidades desde guardar bebidas até uma ampla variedade de alimentos em formas e tamanhos diferentes dentro do espaço estabelecido.</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_meus_produtos">Ofertas</string>
    <string name="menu_item_carrinho">Carrinho</string>
    <string name="menu_item_historico_de_compras">Histórico</string>
    <string name="menu_item_negociacoes">Negociações</string>
    <string name="label_buscar_produto">Buscar Produto</string>
    <string name="fragment_label_carrinho_vazio">Seu carrinho está vazio</string>
    <string name="top_menu_vizualizar_produto_label">Vizualizar</string>
    <string name="top_menu_adicionar_produto_label">Adicionar</string>
    <string name="top_menu_editar_produto_label">Editar</string>
    <string name="top_menu_remover_produto_label">Remover</string>
    <string name="msg_remocao_produto">Deseja remover esse produto?</string>
    <string name="confirmacao">Sim</string>
    <string name="negacao">Não</string>
    <string name="label_transacao_id">ID</string>
    <string name="label_transacao_data">Data</string>
    <string name="label_transacao_valor">Valor</string>
    <string name="label_transacao_placeholder">PLACEHOLDER</string>
    <string name="cpf_hint">digite seu cpf</string>
    <string name="title_activity_maps">MapsActivity</string>
</resources>