<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/top_menu_item_visualizar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_remove_red_eye_24"
        android:title="@string/top_menu_vizualizar_produto_label" />
    <item
        android:id="@+id/top_menu_item_adicionar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/top_menu_adicionar_produto_label" />
    <item
        android:id="@+id/top_menu_item_editar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_edit_24"
        android:title="@string/top_menu_editar_produto_label" />
    <item
        android:id="@+id/top_menu_item_remover"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_delete_24"
        android:title="@string/top_menu_remover_produto_label" />
</menu>